# rubick-native

./: .gitignore  Cargo.toml  README.md  ava.config.js  index.ts  package.json  postbuild.js  prepub.cjs  prepub.js  test.ts  tsconfig.json  tsconfig.test.json
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: clipboard.spec.ts  keyboard.spec.ts
addon/: .gitignore  Cargo.toml  afterBuild.js  index.d.ts  index.js  package.json  postbuild.js  prepub.js
addon/.cargo/: config.toml
addon/.github/workflows/: CI.yml
addon/npm/android-arm-eabi/: README.md  package.json
addon/npm/android-arm64/: README.md  package.json
addon/npm/darwin-arm64/: README.md  package.json
addon/npm/darwin-universal/: README.md  package.json
addon/npm/darwin-x64/: README.md  package.json
addon/npm/freebsd-x64/: README.md  package.json
addon/npm/linux-arm-gnueabihf/: README.md  package.json
addon/npm/linux-arm64-gnu/: README.md  package.json
addon/npm/linux-arm64-musl/: README.md  package.json
addon/npm/linux-x64-gnu/: README.md  package.json
addon/npm/linux-x64-musl/: README.md  package.json
addon/npm/win32-arm64-msvc/: README.md  package.json
addon/npm/win32-ia32-msvc/: README.md  package.json
addon/npm/win32-x64-msvc/: README.md  package.json
addon/src/: lib.rs
addon/src/clipboard/: mod.rs
addon/src/monitor/: mod.rs
addon/src/shotcut/: mod.rs
addon/src/shotcut/exelook/: dib.rs  mod.rs
addon/src/simulation/: mod.rs
lib/: clipboard.ts  folder.ts  index.ts  monitor.ts  simulation.ts
lib/sysapp/: index.ts  windows.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: README.md
npm/win32-x64-msvc/: README.md  package.json
src/: cb.ts  clipboard.ts  folder.ts  index.ts  main.rs  monitor.ts  simulation.ts
src/deprecated/: cb.ts  package.json
src/monitor/: mod.rs
(+5 files in other folders)
