[package]
edition = "2021"
name = "rubick-native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rdev = { version = "0.5", features = ["serialize", "unstable_grab"] }
clipboard-files = "0.1"
copypasta = "0.10"
enigo = "0.1"
napi = { version = "2", features = ["async"] }
napi-derive = "2"
serde_json = "1"
lnk_parser = "0.4"
parselnk = "0.1"
pelite = "0.10"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
